@@ -1228,54 +1228,6 @@ acts.find("*").each(function(i){var it=$(this);
     }
 });
 
-/* Not using sector_img from Google anymore
-acts.each(function(i){var it=$(this);
-
-	var base=it.children(".span_sector");
-	var aa=base.children("sector[vocabulary=\"DAC\"],sector[vocabulary=\"1\"]");
-	if(aa.length>0)
-	{
-	
-		var av=[];
-		var an=[];
-		aa.each(function(i,v){
-			var name=$(this).children("span").first().html();
-			var value=$(this).attr("percentage") || "100";
-			av.push(value);
-			an.push(name+" ("+value+"%)");
-		});
-		
-		var url="http://chart.googleapis.com/chart?chco=0099ff,888888&chdls=444444,16&chs=880x275&cht=p&chds=a&chp=4.712";
-		url=url+"&chd=t:"+av.join(",")+"&chdl="+an.join("|")
-
-		base.before("<img src=\""+url+"\" style=\"width:880px;height:275px\" class=\"sector_pie\" />");
-	}
-});
-
-
-acts.each(function(i){var it=$(this);
-
-	var base=it.children(".span_recipient-country");
-	var aa=base.children("recipient-country");
-	if(aa.length>0)
-	{
-	
-		var av=[];
-		var an=[];
-		aa.each(function(i,v){
-			var name=$(this).children("span").first().html();
-			var value=$(this).attr("percentage") || "100";
-			av.push(value);
-			an.push(name+" ("+value+"%)");
-		});
-		
-		var url="http://chart.googleapis.com/chart?chco=0099ff,888888&chdls=444444,16&chs=880x275&cht=p&chds=a&chp=4.712";
-		url=url+"&chd=t:"+av.join(",")+"&chdl="+an.join("|")
-
-		base.before("<img src=\""+url+"\" style=\"width:880px;height:275px\" class=\"country_pie\" />");
-	}
-});
-*/
 
 // apply css to selected div
 acts.find("location").each(function(i){var it=$(this);
@@ -1285,14 +1237,6 @@ acts.find("location").each(function(i){var it=$(this);
 	}
 });
 
-// move baseline-year after baseline-value
-//$("result indicator reference").each(function() {
-//    $(this).insertAfter($(this).parent().find('span-result'));
-//});
-
-// wrap span around sector / country image
-//$('img.sector_pie').wrap($('<span class="sector_img">'));
-//$('img.country_pie').wrap($('<span class="country_img">'));
 
 //	add hide div to these classes
 $( "span.span_document-link, span.span_participating-org, span.span_recipient-country, span.span_budget, span.span_planned-disbursement, span.span_result, span.span_related-activity, span.span_location, span.span_recipient-region, span.span_policy-marker" ).each(function(i,el){
@@ -1395,7 +1339,7 @@ $( "span.span_transaction").each(function(i,el){
 	{
 		e.parent().find(".transactions_svg_type_"+idx).append("<span class='legend type_" + idx + "'></span>");	// add span for legend
 	}	
-	e.parent().find("span.legend").detach().appendTo(".legend_wrap");	// move to legend_wrap
+	e.parent().find("span.legend").clone().appendTo(".legend_wrap");	// duplicate and move inside legend_wrap
 });
 
 
