@@ -1,3 +1,9 @@
+Development Portal (2019-01-11 shi)
+==============================
+Add legend to individual transaction graphs in SAVi
+Update print-friendly css
+
+
 Development Portal (2019-01-10 shi)
 ==============================
 Update print-friendly css for new graphs
